--- a/plugin.xml
+++ b/plugin.xml
@@ -22,7 +22,7 @@
                 <param name="onload" value="true" />
             </feature>
         </config-file>
-        
+        <source-file src="native/android/CordovaFirebase.java" target-dir="org/apache/cordova" />
     </platform>
 
     <platform name="ios">
