--- a/plugin.xml
+++ b/plugin.xml
@@ -39,6 +39,8 @@
 
         <podspec>
             <pods use-frameworks="true">
+                <pod name="FirebaseCore" git="https://github.com/firebase/firebase-ios-sdk.git" 
+                branch="release-10.8" configurations="Debug,Release"/>
                 <pod name="FirebaseAnalytics" git="https://github.com/firebase/firebase-ios-sdk.git" 
                 branch="release-10.8" configurations="Debug,Release"/>
                 <pod name="GoogleAppMeasurement" git="https://github.com/firebase/firebase-ios-sdk.git" 
